--- a/module/Album/view/album/album/add.phtml
+++ b/module/Album/view/album/album/add.phtml
@@ -6,13 +6,13 @@ $this->headTitle($title);
 <?php
 // This provides a default CSS class and placeholder text for the title element:
 /** @var \Zend\Form\Form $album */
-$album = $this->form->get('title');
+$album = $this->form->get('album')->get('title');
 $album->setAttribute('class', 'form-control');
 $album->setAttribute('placeholder', 'Album title');
 
 // This provides a default CSS class and placeholder text for the artist element:
 /** @var \Zend\Form\Form $artist */
-$artist = $this->form->get('artist');
+$artist = $this->form->get('album')->get('artist');
 $artist->setAttribute('class', 'form-control');
 $artist->setAttribute('placeholder', 'Artist');
 
@@ -42,5 +42,5 @@ echo $this->form()->openTag($this->form);
 
 <?php
 echo $this->formSubmit($submit);
-echo $this->formHidden($this->form->get('id'));
+echo $this->formHidden($this->form->get('album')->get('id'));
 echo $this->form()->closeTag();
