--- a/module/Album/view/album/album/delete.phtml
+++ b/module/Album/view/album/album/delete.phtml
@@ -1,7 +1,7 @@
 <?php
 
 $title = 'Delete album';
-$url   = $this->url('album', ['action' => 'delete', 'id' => $this->id]);
+$url   = $this->url('album', ['action' => 'delete', 'id' => $this->album->getId()]);
 
 $this->headTitle($title);
 ?>
@@ -9,13 +9,13 @@ $this->headTitle($title);
 
 <p>
     Are you sure that you want to delete
-    "<?= $this->escapeHtml($this->album->title) ?>" by
-    "<?= $this->escapeHtml($this->album->artist) ?>"?
+    "<?= $this->escapeHtml($this->album->getTitle()) ?>" by
+    "<?= $this->escapeHtml($this->album->getArtist()) ?>"?
 </p>
 
 <form action="<?= $url ?>" method="post">
     <div class="form-group">
-        <input type="hidden" name="id" value="<?= (int)$this->album->id ?>"/>
+        <input type="hidden" name="id" value="<?= (int)$this->album->getId() ?>"/>
         <input type="submit" class="btn btn-danger" name="del" value="Yes"/>
         <input type="submit" class="btn btn-success" name="del" value="No"/>
     </div>
